# phantomwright-driver-python

./: .gitignore  README.md  patch_python_package.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  regression.yml
.github/workflows/: patchright_release.yml  patchright_tests.yml
utils/: modify_tests.py
